--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 body {
-  background-color:#85e085;
+  background-color:#FCA746;
   font-size: 20px;
+}
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #B6D0E2;
+}
+.button1:hover {
+  background-color: #B6D0E2;
+  color: white;
 }
