--- a/style.css
+++ b/style.css
@@ -2,12 +2,8 @@ body {
   background-color:#FCA746;
   font-size: 20px;
 }
-.button1 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #B6D0E2;
-}
-.button1:hover {
+a:hover {
   background-color: #B6D0E2;
-  color: white;
+  font-size: 18px;
+  color: black;
 }
