--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 }
 a:hover {
   background-color: #B6D0E2;
-  font-size: 18px;
+  font-size: 20px;
   color: black;
+  border: 2px solid #B6D0E2;
 }
