--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ a:hover {
   font-size: 36px;
   font-type: Lato;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
